# controllers/user_controller.go
@@ -24,14 +24,19 @@ func NewUserController(service *services.UserService) *UserController {
 // @Produce		json
 // @Param			email body string true "Email"
 // @Param			password body string true "Password"
+// @Param			username body string true "Username"
 // @Success		200 {string} string	"ok"
 // @Router			/signup/register [post]
 func (uc *UserController) SignUp(ctx *gin.Context) {
-	signinUser, err := uc.service.SignUp("email", "password")
+
+	email := ctx.PostForm("email")
+	password := ctx.PostForm("password")
+	username := ctx.PostForm("username")
+	err, _ := uc.service.SignUp(email, password, username)
 	if err != nil {
 		ctx.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
-	ctx.JSON(http.StatusOK, signinUser)
+	ctx.JSON(http.StatusOK, gin.H{"message": "ok"})
 
 }
